--- a/PlainEdit.xcodeproj/xcshareddata/xcschemes/PlainEdit.xcscheme
+++ b/PlainEdit.xcodeproj/xcshareddata/xcschemes/PlainEdit.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2A2EBF8A1D98873000745704"
-               BuildableName = "PlainTextEditor.app"
-               BlueprintName = "PlainTextEditor"
-               ReferencedContainer = "container:PlainTextEditor.xcodeproj">
+               BuildableName = "PlainEdit.app"
+               BlueprintName = "PlainEdit"
+               ReferencedContainer = "container:PlainEdit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A2EBF8A1D98873000745704"
-            BuildableName = "PlainTextEditor.app"
-            BlueprintName = "PlainTextEditor"
-            ReferencedContainer = "container:PlainTextEditor.xcodeproj">
+            BuildableName = "PlainEdit.app"
+            BlueprintName = "PlainEdit"
+            ReferencedContainer = "container:PlainEdit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -56,9 +56,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A2EBF8A1D98873000745704"
-            BuildableName = "PlainTextEditor.app"
-            BlueprintName = "PlainTextEditor"
-            ReferencedContainer = "container:PlainTextEditor.xcodeproj">
+            BuildableName = "PlainEdit.app"
+            BlueprintName = "PlainEdit"
+            ReferencedContainer = "container:PlainEdit.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -75,9 +75,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A2EBF8A1D98873000745704"
-            BuildableName = "PlainTextEditor.app"
-            BlueprintName = "PlainTextEditor"
-            ReferencedContainer = "container:PlainTextEditor.xcodeproj">
+            BuildableName = "PlainEdit.app"
+            BlueprintName = "PlainEdit"
+            ReferencedContainer = "container:PlainEdit.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
