Update project settings to Xcode 8.1 recomendation

--- a/PlainEdit/Info.plist
+++ b/PlainEdit/Info.plist
@@ -12,7 +12,7 @@
 			<key>CFBundleTypeIconFile</key>
 			<string></string>
 			<key>CFBundleTypeName</key>
-			<string>DocumentType</string>
+			<string>Text Document</string>
 			<key>CFBundleTypeOSTypes</key>
 			<array>
 				<string>????</string>
