--- a/PlainEdit/Info.plist
+++ b/PlainEdit/Info.plist
@@ -48,7 +48,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>© 2016 1024jp</string>
+	<string>© 2016-2018 1024jp</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
